errorsToSend.txt
programmes/test.c: In function ‘main’:
programmes/test.c:3:5: warning: implicit declaration of function ‘print’ [-Wimplicit-function-declaration]
     print("Ouais!\n");
     ^~~~~
programmes/test.c: At top level:
programmes/test.c:6:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 h
 ^
